# mjr

./: .gitignore  CMakeLists.txt  README.md
examples/: input-01~  input-02  input-02~  input-03  input-05  input-06  input-07  notes-01  notes-02  notes-03  notes-04  notes-05  notes-05~  notes-06  notes-06~  notes-07
include/: CImg.h  brdf.h  brdf.h~  camera.h  camera.h~  film.h  film.h~  intersection.h  light.h  light.h~  material.cpp  material.h  material.h~  objects.h  objects.h~  parser.h  parser.h~  pixel.h  ray.h  raytracer.h  raytracer.h~  sample.h  sampler.h  scene.h  scene.h~  transformation.h  transformation.h~  vector3d.h  vector3d.h~
src/: a.out  brdf.cpp  camera.cpp  film.cpp  light.cpp  main.cpp  material.cpp  objects.cpp  parser.cpp  ray.cpp  raytracer.cpp  sample.cpp  sampler.cpp  scene.cpp  shading.cpp  transformation.cpp  vector3d.cpp
test/: CMakeLists.txt  input_test.txt  testCamera.cpp  testFilm.cpp  testObjects.cpp  testParser.cpp  testPolygon.cpp  testRay.cpp  testRayTracer.cpp  testvector3d.cpp
test/scene/: 1.scene  1.scene~  2.scene  3.scene  flattriangle.scene  teapot.scene
